Реализованы layout, ui компоненты, настроен redux, функционал строки поиска

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -3,3 +3,12 @@
 .app {
   height: 100%;
 }
+
+.main {
+  height: calc(100vh - 80px - 32px);
+}
+
+.footer {
+  height: 32px;
+  background-color: $brown;
+}
