--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,8 @@
 
 html {
   font-family: 'Roboto', sans-serif;
+  font-size: 0.875rem;
+  color: $black;
 }
 
 body {
@@ -31,7 +33,8 @@ ul {
 input {
   min-width: 0;
   font-family: inherit;
-
+  font-size: inherit;
+  
   &::-webkit-outer-spin-button,
   &::-webkit-inner-spin-button {
     -webkit-appearance: none;
