--- a/src/components/Repositories/RepoData/RepoTable/RepoTable.module.scss
+++ b/src/components/Repositories/RepoData/RepoTable/RepoTable.module.scss
@@ -28,7 +28,7 @@
   cursor: pointer;
 
   &.selected {
-    background-color:rgb(0, 0, 0, 0.08);
+    background-color: rgba(33, 150, 243, 0.04);
   }
 
   &:last-child td,
